test/C/src/enclave/failing/PhysicalEnclavedConnection.lf
target C;

import EnclaveSink, EnclaveSource from "../lib/SimpleEnclave.lf"


main reactor {
    @enclave
    src = new EnclaveSource()

    sink = new EnclaveSink()

    src.out ~> sink.in
}